# SecureOribitalUplinkLayer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Client/: ChatClient.cpp  ChatClient.h  Client.cpp
Common/: BoostJson.cpp  FrameCodec.cpp  FrameCodec.hpp  TelemetryFrame.cpp  TelemetryFrame.h  TelemetryFrame.hpp
Database/: Database.cpp  Database.hpp
Hub/: TelemetryHub.cpp  TelemetryHub.h  TelemetryHub.hpp  main.cpp
OrbitalRendering/: Camera.cpp  Camera.hpp  orbitview.cpp  orbitview.hpp
OrbitalRendering/Shader/: ShaderSource.hpp
OrbitalRendering/main/: SatelliteVisual.cpp  SatelliteVisual.hpp  orbitview.cpp  orbitview.hpp
OrbitalRendering/render/: MeshData.hpp  ObjLoader.cpp  ObjLoader.hpp  TexturedMesh.cpp  TexturedMesh.hpp
ReceiverServer/: SatelliteSim.cpp
ReciverServer/: SatelliteSim.hpp  main.cpp
SatelliteSender/: TelemetryHub.cpp  TelemetryHub.hpp
Server/: ChatServer.cpp  ChatServer.h  SatelliteSim.cpp  SatelliteSim.hpp  Server.cpp  main.cpp
Sim/: SatelliteSim.cpp  SatelliteSim.hpp  main.cpp
docs/: 01_requirement.md  02_protocol.md  03_architecture.md
scratchTests/: TestFrameCodec.cpp
simulation/: SimulationState.cpp  SimulationState.hpp
src/: Client.cpp  main.cpp
ui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui
